2004-10-20  Vincent Noel  <vnoel@cox.net>

	* logview.c (CreateMainWin): Remove extra border in the main window.

2004-10-18  Fernando Herrera  <fherrera@onirica.com>

	* logview.c: (SaveUserPrefs): Use /apps/gnome-system-log/logfile 
	key when saving prefererences (that is what is read on startup)

2004-08-11  Glynn Foster  <glynn.foster@sun.com>

	* about.c: (AboutShowWindow): Should be 'translator-credits'.

2004-08-03  Glynn Foster  <glynn.foster@sun.com>

	* doc/C/logview.sgml, pixmaps/.cvsignore: Remove, old.

2004-07-19  Shakti Sen  <shprasad@novell.com>

	* monitor.c (mon_read_last_page):
	Fixes the crash if log messages is having less
	than 5 lines.  Fixes bug #145180

2004-07-19  Shakti Sen  <shprasad@novell.com>

	*monitor.c (monitor_window_destroyed_cb):
	Remove the timer to fix the crash.
	Fixes bug #145120

2004-07-19  Glynn Foster  <glynn.foster@sun.com>

	* actions.c: Use g_spawn instead of exec. Patch
	from James Strandboge and Shakti. Fixes #135869.

2004-05-08  Glynn Foster  <glynn.foster@sun.com>

	* log_repaint.c, zoom.c: Patch from Harsh Jaitly  
	for #127091 - log viewer detail view picks wrong 
	entry

2004-05-08  Glynn Foster  <glynn.foster@sun.com>

	* logview.c: Patch from Samuel Stringham to parse
	/etc/syslog.conf on first start up to see if it
	can find some logs to open. Fixes #80865.

2004-04-20  Glynn Foster  <glynn.foster@sun.com>

	* Makefile.am: Fix distcheck.

2004-03-08  Dennis Cranston  <dennis_cranston at yahoo com>

	* Makefile.am: Revert builddir != srcdir fix because it 
	breaks 'make distcheck'.
	
2004-02-23  Julio M Merino Vidal <jmmv@menta.net>
                                                                                
        * Makefile.am: honour gconf configure option
                                                                                
2004-01-18  Jason Leach  <leach@wam.umd.edu>

	* Makefile.am (schema_source_data): builddir != srcdir fix.

2004-01-15  Maxim Dzumanenko <mvd@mylinux.com.ua>
