@@ -1,5 +1,8 @@
 2004-10-20  Vincent Noel  <vnoel@cox.net>
 
+	* log_repaint.c (UpdateStatusArea): Use status bar.
+	(CreateMainWin): Use a regular statusbar instead of a box+label.
+
 	* logview.c (CreateMainWin): Remove extra border in the main window.
 
 2004-10-18  Fernando Herrera  <fherrera@onirica.com>
